--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@tanstack/react-query": "5.45.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.16.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "react": "^18.3.1",
